fix: Removed all code warnings